--- a/style.css
+++ b/style.css
@@ -61,9 +61,15 @@ label {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-left: 300px;
-  padding-right: 300px;
-  font-size: 30px;
+  padding-left: 200px;
+  padding-right: 200px;
+  font-size: 20px;
   font-weight: bold;
   text-align: justify;
 }
+
+ #lyrics p{
+  margin: 0;
+  padding: 0;
+  line-height:0.8;
+} 
